[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/_common/GUI/icons/book.svg" type="Texture" id=1]
[ext_resource path="res://scenes/Items/collectibles/CluePickup.gd" type="Script" id=2]
[ext_resource path="res://scenes/_common/GUI/sfx/wow.ogg" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]

[node name="CluePickupAreaVolume" type="Spatial"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="Sprite" type="Sprite3D" parent="Area"]
transform = Transform( 0.124848, 0, 0, 0, -4.37114e-08, 1, 0, -0.124848, -5.45728e-09, 0, 0, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 0.49473, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="PickupNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="finished" from="PickupNoise" to="." method="_on_PickupNoise_finished"]
